# libactor

./: .hgignore  CMakeLists.txt  COPYING  COPYING.rst  Makefile.am  Makefile.in  README.rst  configure  configure.ac
doc/: Makefile.am  Makefile.in
doc/source/: conf.py  index.rst
examples/: Makefile.am  Makefile.in  example.c  http_server.c
src/: CMakeLists.txt  Makefile.am  Makefile.in  actor.c  actor.h  list.c  list.h  types.h
